idea/testData/checker/regression/InterfaceDeclarationAsExpression.fir.kt
val p = 1 <error descr="[AMBIGUITY] Ambiguity between candidates: [kotlin/Int.compareTo, kotlin/Int.compareTo, kotlin/Int.compareTo, ...]"><</error> <error descr="[EXPRESSION_REQUIRED] ">interface A {
    fun f() {
        f()
    }
}</error>
